add ability to create directories

--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -17,17 +17,11 @@ form.media-library {
 }
 
 /*
- *	Nav item changes
+ *	The header/actions area
  */
-.media-library-direct {
-	display: inline-block;
-	width: 18px;
-	height: 18px;
-	margin-left: 0.5rem;
-	background: url('icons/icon-login.svg') no-repeat 50% 50% / cover;
 
-	position: relative;
-	top: 0.5rem;
+.ml-trigger-directory {
+	background: #f0f0f0
 }
 
 /*
