--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -364,6 +364,26 @@ form.media-library {
 /* @end */
 
 /*
+ *	The directory header
+ */
+.ml-select-all {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	margin-bottom: 1rem;
+	padding: 0 68px 0 30px;
+}
+
+.ml-select-all button {
+	margin-right: 2rem;
+}
+
+.ml-select-all label {
+	margin: 0 5px;
+}
+/* @end */
+
+/*
  *	The directory breadcrumbs
  */
 .ml-breadcrumbs {
@@ -562,7 +582,6 @@ form.media-library {
 
 .ml-file a.copy + input {
 	position: relative;
-	top: 3px;
 	margin-right: 0;
 	margin-left: 5px;
 }
