--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -33,17 +33,31 @@ form.media-library {
 }
 
 .media_library-upload {
-	height: 0;
+	/*height: 0;
 	margin: 0 auto;
 	padding: 0;
 	overflow: auto;
 
-	transition: all 300ms ease-out;
+	transition: all 300ms ease-out;*/
+
+	overflow: hidden;
+	transition: opacity 300ms ease-out;
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9001;
+	opacity: 0;
+	pointer-events: none;
 }
 
 .media_library-upload.is-active {
-	height: 390px;
-	padding: 50px 0;
+	/*height: 390px;
+	padding: 50px 0;*/
+	opacity: 1;
+	pointer-events: all;
+	background-color: rgba(0,0,0,0.7);
 }
 
 .media_library-upload button {
@@ -226,11 +240,19 @@ form.media-library {
 
 /* Drop area */
 .media_library-droparea {
-	position: relative;
+	/*position: relative;
 	width: 90%;
 	max-width: 400px;
 	margin: 0 auto;
+	overflow: hidden;*/
+
+	position: relative;
+	width: 75vw;
+	height: 60vh;
 	overflow: hidden;
+	margin: 20vh auto;
+	background: #fff;
+	border-radius: 3px;
 }
 
 .media_library-droparea.switch-method .media_library-droparea_column {
@@ -238,8 +260,12 @@ form.media-library {
 }
 
 .media_library-droparea_columns {
+	/*display: flex;
+	width: 200%;*/
 	display: flex;
-	width: 200%;
+	width: 100%;
+	height: 100%;
+	padding: 25px;
 }
 
 .media_library-droparea_column {
