--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -42,8 +42,10 @@ form.media-library {
 
 	overflow: hidden;
 	transition: opacity 300ms ease-out;
-	height: 100vh;
-	width: 100vw;
+	/*height: 100vh;*/
+	/*width: 100vw;*/
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -247,10 +249,12 @@ form.media-library {
 	overflow: hidden;*/
 
 	position: relative;
-	width: 75vw;
-	height: 60vh;
+	width: 100%;
+	height: 100%;
+	/*width: 75vw;*/
+	/*height: 60vh;*/
 	overflow: hidden;
-	margin: 20vh auto;
+	/*margin: 20vh auto;*/
 	background: #fff;
 	border-radius: 3px;
 }
